# passive-demoapp-android

./: .gitignore  README.md  settings.gradle
app/: build.gradle  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/res/anim/: blink.xml  slide_up_fade_in.xml  zoom_out.xml
app/src/main/res/drawable/: bg_capsule_blue.xml  bg_capsule_outline_accent.xml  bg_capsule_outline_gray.xml  bg_circle_white.xml  bg_rectangle_gray.xml  bottom_button_drawable.xml  circle_background.xml  disabled_button.xml  ic_back_button.xml  ic_baseline_mic_off_24.xml  ic_factor_feeling.xml  ic_factor_optimism.xml  ic_info.xml  ic_mic.xml  ic_mic_filled.xml  ic_quiet.xml  ic_review.xml  ic_tip_exercise_icon.xml  linear_gradient.xml  login_input_round_corners.xml  ripple_circle_background.xml
app/src/main/res/drawable-mdpi/: enabled_button.xml
app/src/main/res/layout/: activity_how_it_works.xml  activity_main.xml  activity_passive_foreground_recording.xml  activity_pin_code.xml  activity_recording_host.xml  activity_signup.xml  activity_splash.xml  activity_voice_processing.xml  activity_welcome.xml  alert_dialog_layout.xml  enrollment_notifier_fragment.xml  enrollment_success_fragment.xml  enrollment_user_fragment.xml  foreground_recording.xml  fragment_count_down.xml  fragment_feeling.xml  fragment_feeling_reasons.xml  fragment_how_it_works.xml  fragment_set_pin.xml  fragment_setting.xml  fragment_signup_step.xml  layout_tip_item.xml  (+14 more)
base/: build.gradle
base/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
voip_vad/: build.gradle
voip_vad/src/main/: AndroidManifest.xml
voip_vad/src/main/cpp/: CMakeLists.txt  voip_vad.c
voip_vad/src/main/cpp/global_h/: sonde_datatypes.h
voip_vad/src/main/cpp/h/: resample_fft.h  sonde_sp_api.h  sonde_sp_elck_define.h  sonde_spfe_define.h  sonde_spfe_filter.h  sonde_spfe_function_def.h  sonde_spfe_thresholds.h  sonde_spfe_vtc_define.h
voip_vad/src/main/cpp/src/elicitation_detection/: sonde_sfe_elicitation_detection.c  sonde_sfe_filters.c
voip_vad/src/main/cpp/src/energy_meter/: sonde_sfe_energy_meter.c
voip_vad/src/main/cpp/src/free_speech/: sonde_sfe_free_speech.c
voip_vad/src/main/cpp/src/lmk/: sonde_sfe_landmarks.c
voip_vad/src/main/cpp/src/main/: main.c  sonde_sfe_elck_init.c  sonde_sp_elck_driver.c
voip_vad/src/main/cpp/src/preprocessing/: sonde_sfe_config_fileread.c  sonde_sfe_mem_init.c  sonde_sfe_preprocessing.c  sonde_sfe_waveread.c
voip_vad/src/main/cpp/src/signal/: resample_fft.c  sonde_sfe_fft.c  sonde_sfe_optfft.c  sonde_sfe_optsigproc.c  sonde_sfe_resample.c  sonde_sfe_sma_filter.c
voip_vad/src/main/cpp/src/vad/: sonde_sfe_vad_mathops.c  sonde_sfe_vad_proc.c
voipcall/: build.gradle
voipcall/src/main/: AndroidManifest.xml
(+265 files in other folders)
